Готовые 8 и 9 ДЗ. Карточки передаются в редактирование, редактируются, сохраняются. 8 ДЗ. Список заметок есть, карточки есть, класс данных используется для заполнения карточки, фрагмент для редактирования есть. 9 ДЗ. Фрагмент добавления\редактирования есть, навигация между фрагментами есть, контекстное меню не работает, DatePicker есть еще с 6 ДЗ.
- Не работает контекстное меню (не выпадает, хотя сделал по примеру из 9 лекции)
- Не работает сохранение состояний.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,10 @@
     <string name="settings">settings</string>
     <string name="about">about</string>
     <string name="add">Add</string>
+    <string name="context_edit">Редактировать</string>
+    <string name="context_delete">Удалить</string>
+    <string name="note_button_save">Сохранить</string>
+    <string name="notes_list_clear">Очистить список заметок</string>
 
     <string-array name="titlesForNotes">
         <item>Список покупок</item>
@@ -17,6 +21,11 @@
         <item>Позвонить в банк</item>
         <item>Цели</item>
         <item>Список книг</item>
+        <item>Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч</item>
+        <item>Шеф взъярён тчк щипцы с эхом гудбай Жюль.</item>
+        <item>Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф.</item>
+        <item>Экс-граф? Плюш изъят. Бьём чуждый цен хвощ!</item>
+        <item>Эх, чужак! Общий съём цен шляп (юфть) — вдрызг!</item>
     </string-array>
 
     <string-array name="datesForNotes">
@@ -24,6 +33,11 @@
         <item>13.09.2021</item>
         <item>02.08.2021</item>
         <item>До 01.01.2022</item>
+        <item>01.01.2021</item>
+        <item>01.01.2021</item>
+        <item>01.01.2021</item>
+        <item>01.01.2021</item>
+        <item>01.01.2021</item>
         <item>01.01.2021</item>
     </string-array>
 
@@ -33,5 +47,10 @@
         <item>Че там с деньгами?</item>
         <item>Выучить Андроид разработку, Зарабатывать 300к\/нс</item>
         <item>Колобок, Незнайка на Луне, Искусство войны</item>
+        <item>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</item>
+        <item>Эта парадигматическая страна, в которой жаренные члены предложения залетают прямо в рот. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни.</item>
+        <item>Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку.</item>
+        <item>Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка.</item>
+        <item>Грустный риторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись. Она предупредила его: «В моей стране все переписывается по несколько раз. Единственное, что от меня осталось, это приставка «и».</item>
     </string-array>
 </resources>
