--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="context_delete">Удалить</string>
     <string name="note_button_save">Сохранить</string>
     <string name="notes_list_clear">Очистить список заметок</string>
+    <string name="textViewClear">Очистить список заметок?</string>
+    <string name="Yes">Да</string>
+    <string name="No">Нет</string>
 
     <string-array name="titlesForNotes">
         <item>Список покупок</item>
